@@ -1,3 +1,13 @@
+2024-12-22  Björn Esser  <besser82 at fedoraproject.org>
+
+	tcb_(un)convert: Check for UID and EUID to be 0 before proceeding.
+	Ensuring the program is run with root privileges on startup is the
+	safer approach instead on relying that mode 0700 may prevent the
+	tool being run by a regular system user.
+	* progs/tcb_convert.c (main): Check for UID and EUID to be 0 before
+	proceeding.
+	* progs/tcb_unconvert.c (main): Likewise.
+
 2024-12-20  Björn Esser  <besser82 at fedoraproject.org>
 
 	libnss_tcb: Disallow potentially-malicious user names in getspnam(3).
